--- a/.github/workflows/changes.yml
+++ b/.github/workflows/changes.yml
@@ -11,6 +11,8 @@ on:
 jobs:
   changes:
     name: Detect Changes
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     outputs:
       server: ${{ steps.filter.outputs.server }}
