--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,6 @@ name: Fleet Release
 
 permissions:
   contents: write
-  packages: write
   actions: write
   pull-requests: write
   attestations: write
@@ -25,9 +24,6 @@ on:
         type: string
 
 env:
-  REGISTRY: "ghcr.io"
-  ORGANISATION: ${{ github.repository_owner }}
-  REPOSITORY: ${{ github.event.repository.name }}
   BINARY_NAME: fleet
 
 # =============================================================================
@@ -130,19 +126,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to GHCR
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
@@ -155,6 +138,9 @@ jobs:
 
       - name: Install JS Dependencies
         run: make deps-js
+
+      - name: Install ARM64 cross-compiler
+        run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
 
       - name: Install GoReleaser
         uses: goreleaser/goreleaser-action@v6
