--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -171,6 +171,9 @@ jobs:
       - name: Install JS Dependencies
         run: make deps-js
 
+      - name: Install ARM64 cross-compiler
+        run: sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
+
       - name: Install GoReleaser
         uses: goreleaser/goreleaser-action@v6
         with:
