--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -152,6 +152,12 @@ jobs:
         if: github.event_name == 'workflow_dispatch'
         run: git tag -f ${{ inputs.version }}
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
