--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -177,15 +177,36 @@ jobs:
             goreleaser release --clean --snapshot
           fi
 
-      - name: Delete arch-specific image tags
+      - name: Push latest tag on push
+        if: github.event_name == 'push'
+        run: |
+          SNAPSHOT_VERSION=$(cat dist/metadata.json | jq -r '.version')
+          IMAGE_BASE="${{ env.REGISTRY }}/${{ github.repository_owner }}/fleet"
+
+          # Push arch-specific images
+          docker push "${IMAGE_BASE}:${SNAPSHOT_VERSION}-amd64"
+          docker push "${IMAGE_BASE}:${SNAPSHOT_VERSION}-arm64"
+
+          # Create and push latest manifest
+          docker manifest create "${IMAGE_BASE}:latest" \
+            "${IMAGE_BASE}:${SNAPSHOT_VERSION}-amd64" \
+            "${IMAGE_BASE}:${SNAPSHOT_VERSION}-arm64"
+          docker manifest push "${IMAGE_BASE}:latest"
+
+          # Save version for cleanup step
+          echo "IMAGE_VERSION=${SNAPSHOT_VERSION}" >> $GITHUB_ENV
+
+      - name: Set image version for cleanup
         if: github.event_name == 'workflow_dispatch'
+        run: echo "IMAGE_VERSION=${{ inputs.version }}" >> $GITHUB_ENV
+
+      - name: Delete arch-specific image tags
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          VERSION="${{ inputs.version }}"
           ORG="${{ github.repository_owner }}"
           for arch in amd64 arm64; do
-            TAG="${VERSION}-${arch}"
+            TAG="${IMAGE_VERSION}-${arch}"
             echo "Deleting tag: ${TAG}"
             # Get version ID by tag
             VERSION_ID=$(gh api "/orgs/${ORG}/packages/container/fleet/versions" \
